# Trans2Rust

./: .gitignore  QUICK_START.md  README.md  env.example  install.sh  package.json  pyproject.toml
CStarX：基于多智能体系统的C/: C++到Rust智能代码翻译工具
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx
frontend/src/pages/: Dashboard.tsx  ProjectList.tsx  Settings.tsx  TranslationPage.tsx
input/02-Medium/: CMakeLists.txt  CMakeLists.txt.c2rust
input/02-Medium/docker/: Dockerfile  sources.list
input/02-Medium/src/: utf8-decoder.c  utf8-decoder.h
input/02-Medium/test/: test-alloc-testing.c  test-arraylist.c  test-avl-tree.c  test-binary-heap.c  test-binomial-heap.c  test-bloom-filter.c  test-compare-functions.c  test-cpp.cpp  test-hash-functions.c  test-hash-table.c  test-list.c  test-queue.c  test-rb-tree.c  test-set.c  test-slist.c  test-sortedarray.c  test-tinyexpr.c  test-trie.c  test-utf8-decoder.c
input/03-Examples/: CMakeLists.txt
input/03-Examples/src/: main.c  math_utils.c  math_utils.h
src/: __init__.py  main.py
src/agents/: orchestrator.py
src/api/: __init__.py
src/cli/: __init__.py  __main__.py
src/core/: dependency_analyzer.py  state_manager.py  translator.py
src/mcp/: __init__.py
src/models/: config.py  project.py
src/utils/: __init__.py  compilation_verifier.py  error_fixer.py  progress_viewer.py  temperature_optimizer.py
tests/: test_core.py
